objects/dc_Producer_Commission__c.object
<CustomObject>
    <fields>
        <fullName>Commission_Amount__c</fullName>
        <formula>Payment_Amount__c * (VALUE(Text(Contract_Level__c))/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Table__c</fullName>
        <label>Commission Table</label>
        <referenceTo>dc_Commission_Table__c</referenceTo>
        <relationshipLabel>Producer Commissions</relationshipLabel>
        <relationshipName>Producer_Commissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract_Level__c</fullName>
        <label>Contract Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contract_Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Producer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Producer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Producer Commissions</relationshipLabel>
        <relationshipName>Producer_Commissions</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>